fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-/* @font-face {
-  font-family: "Francois One";
-  src: URL("FrancoisOne-Regular.ttf") format("truetype");
-} */
-
 body {
   font-family: "Francois One", sans-serif;
   overflow: hidden;
@@ -16,6 +11,7 @@ button {
 a,
 a:visited {
   text-decoration: none;
+  color: inherit;
 }
 
 .welcome-container {
@@ -72,6 +68,7 @@ a:visited {
     rgba(248, 173, 157, 1) 68%,
     rgba(240, 128, 128, 1) 96%
   );
+  overflow: hidden;
 }
 
 .nav-bar {
@@ -99,10 +96,9 @@ a:visited {
   justify-content: center;
   align-items: center;
   border: 5px solid #f9a03f;
-  /* border-radius: 50%; */
-  padding: 30px;
-  width: 80%;
-  margin: 15% 3% 0 3%;
+  height: 200px;
+  width: 250px;
+  margin: 15px;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
   background-color: whitesmoke;
 }
